2008-05-04  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* docs/gnomeprint/wscript:
	* docs/gnomeprintui/wscript:
	* docs/gtksourceview/wscript:
	* evolution/wscript:
	* gnomeapplet/wscript:
	* gnomedesktop/wscript:
	* gnomekeyring/wscript:
	* gnomeprint/wscript:
	* gtksourceview/wscript:
	* mediaprofiles/wscript:
	* metacity/wscript:
	* nautilusburn/wscript:
	* rsvg/wscript:
	* totem/wscript:
	* wnck/wscript:
	* wscript: Fixes for the upcoming WAF 1.4.1 (but still also works with WAF 1.3.2).

2008-05-04  Marcin Banasiak  <megabajt@pld-linux.org>

	reviewed by: Gustavo Carneiro

	* gnomekeyring/gnomekeyring.override: Bug 531254 –
	gnomekeyring.get_default_keyring_sync() always returns None.

2008-04-12  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* wscript, configure.ac: Bump version to 2.23.0.

=== 2.22.0 ===
2008-03-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* wscript, configure.ac: Bump version.

=== 2.21.3 ===
2008-02-23  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* wscript (build): Fix typo in passing includedir into the .pc file.

	* NEWS: Update.

	* configure.ac: Add autotools deprecation warning and WAF build
	instructions.

2008-02-18  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* evolution/evo-calendar.c (evo_cal_source_open_source)
	(evo_cal_source_open_new_with_absolute_uri): Fix potential NULL
	strings inside g_warnings (bug #505647).

2008-02-16  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* evolution/wscript:
	* gnomeapplet/wscript:
	* gnomedesktop/wscript:
	* gnomekeyring/wscript:
	* gnomeprint/wscript:
	* gtksourceview/wscript:
	* mediaprofiles/wscript:
	* metacity/wscript:
	* nautilusburn/wscript:
	* rsvg/wscript:
	* totem/wscript:
	* wnck/wscript:
	Fix waf scripts to build python extensions using the
	'plugin' object type.  This should fix the python modules for Mac
	OS X when using waf 1.3.2.

2008-02-16  Justin Mazzola Paluska

	* gnomekeyring/gnomekeyring.override
	(pygnome_keyring_attribute_list_as_pyobject): Bug 516788 –